--- a/hangman/style.css
+++ b/hangman/style.css
@@ -97,12 +97,12 @@ header{
   gap: 1rem;
   padding: 0;
   margin: 10rem 0 3rem;
-  max-width: 60%;
+  max-width: 95%;
 
 }
 
-li {
-  font-size: 4rem;
+.letter {
+  font-size: 3rem;
   font-weight: bold;
   color: #11361d;
   text-align: center;
@@ -115,10 +115,10 @@ li {
   
 }
 
-li.guessed{
+.letter.guessed{
   
   height: 0;
-  margin-top: -7.5rem;
+  margin-top: -6rem;
 }
 
 .game__keyboard {
@@ -133,6 +133,7 @@ li.guessed{
   margin: 0.5rem;
   padding: 1.1rem;
   font-size: 2rem;
+  text-transform: uppercase;
   width: 5rem;
   background-color: #314e3f;
   border: none;
@@ -145,6 +146,13 @@ li.guessed{
 .game__keyboard button:hover{
   background-color: #577458;
   color: #2c4638;
+ 
+}
+
+.game__keyboard button[disabled] {
+  background-color: #577458;
+  color: #2c4638;
+  pointer-events: none;
 }
 
 .modal{
@@ -155,10 +163,19 @@ li.guessed{
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.7);
-  display: none;
+  display: flex;
+  opacity: 0;
+  pointer-events: none;
+  z-index: 100;
   justify-content: center;
   align-items: center;
+  transition: opacity 0.5s ease;
 
+}
+
+.modal.show{
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .modal__content{
@@ -189,7 +206,7 @@ li.guessed{
 .modal__answer{
   font-size: 2rem;
   font-weight: bold;
-  /* color: #11361d; */
+  /* color: #11361d;  */
   text-transform: uppercase;
 }
 
