--- a/hangman/style.css
+++ b/hangman/style.css
@@ -9,7 +9,7 @@
 
 body {
 
-  min-height: 100vh;
+  min-height: 100svh;
   width: 100%;
   padding: 2rem;
   background-color: #8a9d8b;
@@ -45,7 +45,7 @@ header{
   align-items: center;
   max-width: 144rem;
   box-sizing: border-box;
-  min-height: 80vh;
+  min-height: 80svh;
 
   
 }
@@ -94,7 +94,7 @@ header{
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 0.7rem;
   padding: 0;
   margin: 10rem 0 3rem;
   max-width: 95%;
@@ -102,12 +102,12 @@ header{
 }
 
 .letter {
-  font-size: 3rem;
+  font-size: 2.8rem;
   font-weight: bold;
   color: #11361d;
   text-align: center;
   text-transform: uppercase;
-  width: 4rem;
+  width: 2.7rem;
   height: 0.3rem;
   border-radius: 0.3rem;
   background-color: #314e3f;
@@ -192,7 +192,7 @@ header{
 }
 
 .modal__title{
-  font-size: 3.5rem;
+  font-size: 3rem;
   margin-top: 2rem;
   text-transform: uppercase;
 }
@@ -229,6 +229,36 @@ header{
   color: #22352b;
 }
 
+.warning-message {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.8rem;
+  font-weight: bold;
+  line-height: 150%;
+  padding: 10rem 5rem;
+  min-width: 33rem;
+  text-align: center;
+  background-color: #686e68;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  display: none;
+}
+
+.warning-message button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 3rem;
+  cursor: pointer;
+}
+
+
 @media (max-width: 1000px){
  
 .game__keyboard button {
@@ -243,8 +273,6 @@ header{
 }
 }
 
-
-
 @media (max-width: 768px){
   .game-container {
     flex-direction: column;
@@ -252,7 +280,32 @@ header{
     padding: 2rem 0;
   }
   .game {
-
     width: fit-content;
+    /* width: auto; */
 }
+}
+
+@media (max-width: 600px){
+  .modal__content{
+    width: 90%;
+  }
+  .warning-message {
+    padding: 10rem 2rem;
+  }
+}
+
+@media (max-width: 420px){
+  .game__hint, .game__incorrect-guess {
+    font-size: 2rem;
+   
+  }
+  
+  .game__hint-text, .game__incorrect-score {
+    font-size: 1.8rem;
+  }
+
+  .modal__title{
+    font-size: 2.5rem;
+ 
+  }
 }
